Fixed navbar collapse

--- a/app/assets/stylesheets/headings.scss
+++ b/app/assets/stylesheets/headings.scss
@@ -119,10 +119,6 @@ p {
 
 
     @media only screen and (max-width: 541px) {
-      
-      .collapse {
-          display: none !important;
-      }
 
       li {
         float: none !important;
